--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@coinbase/onchainkit": "^1.1.2",
+    "@farcaster/miniapp-sdk": "^0.2.1",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.90.10",
     "@zoralabs/zdk": "^2.4.0",
