--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "^5.90.10",
-    "@zoralabs/zdk": "^2.4.0",
+    "@zoralabs/coins-sdk": "^0.3.3",
     "lucide-react": "^0.460.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
