feat: integrate Base Paymaster for gasless voting transactions and update configuration

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ VITE_ZORA_API_KEY=your-api-key-here
 # Supabase
 VITE_SUPABASE_URL=your-supabase-url
 VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# Coinbase Developer Platform (CDP) for Paymaster
+# Get your API key from: https://portal.cdp.coinbase.com/
+VITE_CDP_API_KEY=your-cdp-api-key-here
+
+# Base Paymaster & Bundler Endpoint
+# Format: https://api.developer.coinbase.com/rpc/v1/base/<YOUR-KEY>
+# Get from: https://portal.cdp.coinbase.com/products/bundler-and-paymaster
+VITE_PAYMASTER_URL=https://api.developer.coinbase.com/rpc/v1/base/your-paymaster-key
