--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,14 +9,14 @@
 # API configuration
 enabled = true
 port = 54321
-schemas = ["public", "storage"]
+schemas = ["public", "graphql_public"]
 extra_search_path = ["public", "extensions"]
 max_rows = 1000
 
 [db]
 # Database configuration
 port = 54322
-major_version = 15
+major_version = 17
 
 [studio]
 # Supabase Studio configuration
@@ -36,4 +36,40 @@ verify_jwt = false
 
 [functions.send-transaction]
 verify_jwt = false
+
+[auth]
+enabled = true
+site_url = "http://localhost:3000"
+additional_redirect_urls = []
+jwt_expiry = 3600
+enable_refresh_token_rotation = true
+refresh_token_reuse_interval = 10
+enable_signup = true
+
+[auth.mfa]
+max_enrolled_factors = 10
+
+[auth.mfa.totp]
+enroll_enabled = true
+verify_enabled = true
+
+[auth.mfa.phone]
+enroll_enabled = false
+verify_enabled = false
+
+[auth.email]
+enable_signup = true
+double_confirm_changes = true
+enable_confirmations = false
+secure_password_change = false
+max_frequency = "1m0s"
+otp_length = 8
+otp_expiry = 3600
+
+[auth.email.template]
+
+[auth.sms]
+
+[storage]
+enabled = false
 
