--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "test:coverage": "vitest --coverage",
     "test:integration": "vitest run src/test/integration",
     "test:e2e": "vitest run src/test/e2e",
-    "test:e2e:integration": "vitest run src/test/integration/edgeFunctions.e2e.test.ts"
+    "test:e2e:integration": "vitest run src/test/integration/edgeFunctions.e2e.test.ts",
+    "supabase:start": "supabase start",
+    "supabase:stop": "supabase stop",
+    "supabase:status": "supabase status",
+    "functions:serve": "supabase functions serve --env-file .env.local --no-verify-jwt",
+    "functions:dev": "./start-edge-functions.sh"
   },
   "dependencies": {
     "@buildeross/constants": "0.2.1",
