testing server wallets

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,8 @@ VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
 # Coinbase Developer Platform (CDP) for Paymaster
 # Get your API key from: https://portal.cdp.coinbase.com/
 VITE_CDP_API_KEY=your-cdp-api-key-here
-
+VITE_CDP_API_KEY_SECRET=your-api-key-secret
+VITE_CDP_WALLET_SECRET=your-wallet-secret
 # Base Paymaster & Bundler Endpoint
 # Format: https://api.developer.coinbase.com/rpc/v1/base/<YOUR-KEY>
 # Get from: https://portal.cdp.coinbase.com/products/bundler-and-paymaster
